# ChatRoom

./: CMakeLists.txt
Backend/: CMakeLists.txt  PacketVisitor.h  Packets.cpp  Packets.h  common_defs.h
Backend/client/: ChatRoom.h  Errors.cpp  Errors.h  ResponseParser.cpp  ResponseParser.h  Server.cpp  Server.h  Session.h
Frontend/client-cli/: CLI.cpp  CLI.h  CMakeLists.txt  cli_main.cpp
Support/: CMakeLists.txt  ErrorBase.h
Support/cli-utils/: CLIMenu.cpp  CLIMenu.h  platform.cpp  platform.h
